setup cypress and cypress-xpath

--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cypress": "cypress open",
+    "test":"cypress run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "cypress": "^10.4.0"
+  "devDependencies": {
+    "cypress": "^9.7.0",
+    "cypress-xpath": "^2.0.1"
   }
 }
