--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^9.7.0",
+    "cypress-mochawesome-reporter": "^3.2.2",
     "cypress-xpath": "^2.0.1",
     "jabber": "^1.4.0"
   }
